Criação dos módulos de cadastramento

--- a/app/.vscode/launch.json
+++ b/app/.vscode/launch.json
@@ -3,11 +3,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
-      "type": "pwa-chrome",
+      "name": "Launch Angular",
+      "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "timeout": 20000,
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     },
     {
       "name": "ng test",
