--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -26,13 +26,14 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        file: ./app/Dockerfile
+        file: /app/Dockerfile
         push: true
         tags: gabrieljunio/finance-app:latest
         
   deploy:
     name: Deploy into Heroku Account
     runs-on: ubuntu-latest
+    needs: docker
 
     steps:
       - name: Checkout
