--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
-        context: .
-        file: /app/Dockerfile
+        context: ./app
+        file: Dockerfile
         push: true
         tags: gabrieljunio/finance-app:latest
         
