--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./app
-        file: Dockerfile
+        file: ./Dockerfile
         push: true
         tags: gabrieljunio/finance-app:latest
         
