--- a/app/angular.json
+++ b/app/angular.json
@@ -20,8 +20,14 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
-            ],
+              "src/assets",
+              "src/_redirects",
+              {
+                "glob": "src/_redirects",
+                "input": "src",
+                "output": "/"
+              }
+            ], 
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
